run travis on osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ anguage: ruby
 rvm:
  - 2.1.5
 
+os: osx 
+
 script:
  - bundle exec rake db:migrate --trace
  - RAILS_ENV=test bundle exec rake db:migrate --trace
